Update social share metadata site-wide:\n- New share image: images/elderella-logo-share.jpg\n- Homepage title/description refresh\n- Align OG/Twitter titles & descriptions to page titles\n- Copy updates across product, legal, and support pages

--- a/alpha-ios.html
+++ b/alpha-ios.html
@@ -15,10 +15,12 @@
     <meta property="og:url" content="https://www.elderella.com/alpha-ios">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Installing Elderella on iPhone - Alpha">
     <meta name="twitter:description" content="Step-by-step instructions for installing Elderella on your iPhone using TestFlight. Join our alpha testing program.">
     <meta name="twitter:url" content="https://www.elderella.com/alpha-ios">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Structured Data -->
