--- a/delete-account.html
+++ b/delete-account.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Request permanent deletion of your Elderella account and all associated data. Submit a data deletion request in accordance with privacy regulations.">
+    <meta name="description" content="Request permanent deletion of your Elderella account and all associated data. Submit a deletion request in accordance with privacy regulations.">
     <title>Delete Your Account | Elderella</title>
     <link rel="canonical" href="https://www.elderella.com/delete-account">
     <meta property="og:title" content="Delete Your Account | Elderella">
-    <meta property="og:description" content="Request permanent deletion of your Elderella account and all associated data. Submit a data deletion request in accordance with privacy regulations.">
+    <meta property="og:description" content="Request permanent deletion of your Elderella account and all associated data. Submit a deletion request in accordance with privacy regulations.">
     <meta property="og:url" content="https://www.elderella.com/delete-account">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Delete Your Account | Elderella">
-    <meta name="twitter:description" content="Request permanent deletion of your Elderella account and all associated data. Submit a data deletion request in accordance with privacy regulations.">
+    <meta name="twitter:description" content="Request permanent deletion of your Elderella account and all associated data. Submit a deletion request in accordance with privacy regulations.">
     <meta name="twitter:url" content="https://www.elderella.com/delete-account">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
