--- a/remembers-and-reminds.html
+++ b/remembers-and-reminds.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Learn how Elderella helps you remember and find caregiving information quickly - manage multiple elders, see upcoming care needs, and get medication reminders.">
+    <meta name="description" content="Learn how Elderella helps you remember and find caregiving information quickly. Manage multiple elders, see upcoming care needs, and get medication reminders.">
     <title>Remembers and Reminds - Help for Family Caregivers | Elderella</title>
     <link rel="canonical" href="https://www.elderella.com/remembers-and-reminds">
     <meta property="og:title" content="Remembers and Reminds - Help for Family Caregivers | Elderella">
-    <meta property="og:description" content="Learn how Elderella helps you remember and find caregiving information quickly - manage multiple elders, see upcoming care needs, and get medication reminders.">
+    <meta property="og:description" content="Learn how Elderella helps you remember and find caregiving information quickly. Manage multiple elders, see upcoming care needs, and get medication reminders.">
     <meta property="og:url" content="https://www.elderella.com/remembers-and-reminds">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Remembers and Reminds - Help for Family Caregivers | Elderella">
-    <meta name="twitter:description" content="Learn how Elderella helps you remember and find caregiving information quickly - manage multiple elders, see upcoming care needs, and get medication reminders.">
+    <meta name="twitter:description" content="Learn how Elderella helps you remember and find caregiving information quickly. Manage multiple elders, see upcoming care needs, and get medication reminders.">
     <meta name="twitter:url" content="https://www.elderella.com/remembers-and-reminds">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
