--- a/story.html
+++ b/story.html
@@ -12,10 +12,12 @@
     <meta property="og:url" content="https://www.elderella.com/story">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Share Your Elder Care Story | Elderella">
     <meta name="twitter:description" content="Share your elder care story with Elderella. Help us build better support for family caregivers by sharing your experiences.">
     <meta name="twitter:url" content="https://www.elderella.com/story">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
