--- a/terms.html
+++ b/terms.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Elderella Terms of Service - Terms and conditions for using our elder care coordination platform">
+    <meta name="description" content="Elderella Terms of Service - Terms and conditions for using Elderella, a caregiving platform for elder care.">
     <meta name="keywords" content="elderella terms of service, elder care terms, care coordination agreement, eldercare platform conditions">
 
     
 
     <link rel="canonical" href="https://www.elderella.com/terms">
-    <title>Terms of Service - Elderella</title>
+    <title>Terms of Service - Elderella | Elderella</title>
     <link rel="canonical" href="https://www.elderella.com/terms">
-    <meta property="og:title" content="Terms of Service - Elderella">
-    <meta property="og:description" content="Elderella Terms of Service - Terms and conditions for using our elder care coordination platform">
+    <meta property="og:title" content="Terms of Service - Elderella | Elderella">
+    <meta property="og:description" content="Elderella Terms of Service - Terms and conditions for using Elderella, a caregiving platform for elder care.">
     <meta property="og:url" content="https://www.elderella.com/terms">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Terms of Service - Elderella">
-    <meta name="twitter:description" content="Elderella Terms of Service - Terms and conditions for using our elder care coordination platform">
+    <meta name="twitter:title" content="Terms of Service - Elderella | Elderella">
+    <meta name="twitter:description" content="Elderella Terms of Service - Terms and conditions for using Elderella, a caregiving platform for elder care.">
     <meta name="twitter:url" content="https://www.elderella.com/terms">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Structured Data -->
