--- a/trust.html
+++ b/trust.html
@@ -12,10 +12,12 @@
     <meta property="og:url" content="https://www.elderella.com/trust">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Trust & Security - How We Protect Your Information | Elderella">
     <meta name="twitter:description" content="Learn how Elderella protects your family's caregiving information with healthcare-grade security, privacy controls, and transparent data practices.">
     <meta name="twitter:url" content="https://www.elderella.com/trust">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
