--- a/alpha-android.html
+++ b/alpha-android.html
@@ -15,10 +15,12 @@
     <meta property="og:url" content="https://www.elderella.com/alpha-android">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Installing Elderella on Android - Alpha">
     <meta name="twitter:description" content="Step-by-step instructions for installing Elderella on your Android phone using Google Play. Join our alpha testing program.">
     <meta name="twitter:url" content="https://www.elderella.com/alpha-android">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Structured Data -->
