--- a/download.html
+++ b/download.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta name="description" content="Download Elderella for iOS and Android. Turn everyday elder care updates into organized care you can rely on.">
-    <title>Download Elderella - Family Caregiving Made Simple</title>
+    <title>Download Elderella - Family Caregiving for Elder Care | Elderella</title>
     <link rel="canonical" href="https://www.elderella.com/download">
-    <meta property="og:title" content="Download Elderella - Family Caregiving Made Simple">
+    <meta property="og:title" content="Download Elderella - Family Caregiving for Elder Care | Elderella">
     <meta property="og:description" content="Download Elderella for iOS and Android. Turn everyday elder care updates into organized care you can rely on.">
     <meta property="og:url" content="https://www.elderella.com/download">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Download Elderella - Family Caregiving Made Simple">
+    <meta name="twitter:title" content="Download Elderella - Family Caregiving for Elder Care | Elderella">
     <meta name="twitter:description" content="Download Elderella for iOS and Android. Turn everyday elder care updates into organized care you can rely on.">
     <meta name="twitter:url" content="https://www.elderella.com/download">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
