--- a/how-elderella-works.html
+++ b/how-elderella-works.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Discover how Elderella helps family caregivers organize care, share responsibilities, and manage medications with Ella, your AI caregiving partner.">
-    <title>How Elderella Works - Family Caregiving Made Simple</title>
+    <meta name="description" content="Discover how Elderella helps family caregivers organize care, share responsibilities, and manage medications with Ella, your caregiving partner.">
+    <title>How Elderella Works - Family Caregiving for Elder Care | Elderella</title>
     <link rel="canonical" href="https://www.elderella.com/how-elderella-works">
-    <meta property="og:title" content="How Elderella Works - Family Caregiving Made Simple">
-    <meta property="og:description" content="Discover how Elderella helps family caregivers organize care, share responsibilities, and manage medications with Ella, your AI caregiving partner.">
+    <meta property="og:title" content="How Elderella Works - Family Caregiving for Elder Care | Elderella">
+    <meta property="og:description" content="Discover how Elderella helps family caregivers organize care, share responsibilities, and manage medications with Ella, your caregiving partner.">
     <meta property="og:url" content="https://www.elderella.com/how-elderella-works">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="How Elderella Works - Family Caregiving Made Simple">
-    <meta name="twitter:description" content="Discover how Elderella helps family caregivers organize care, share responsibilities, and manage medications with Ella, your AI caregiving partner.">
+    <meta name="twitter:title" content="How Elderella Works - Family Caregiving for Elder Care | Elderella">
+    <meta name="twitter:description" content="Discover how Elderella helps family caregivers organize care, share responsibilities, and manage medications with Ella, your caregiving partner.">
     <meta name="twitter:url" content="https://www.elderella.com/how-elderella-works">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
