--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Elderella helps family caregivers organize elder care, share responsibilities, and manage medications. Turn chaos into care with our caregiving app.">
-    <title>Elderella - Family Caregiving Made Simple</title>
+    <meta name="description" content="Elderella turns everyday elder care updates into organized care you can rely on.">
+    <title>Elderella - Family Caregiving for Elder Care</title>
     <link rel="canonical" href="https://www.elderella.com/">
-    <meta property="og:title" content="Elderella - Family Caregiving Made Simple">
-    <meta property="og:description" content="Elderella helps family caregivers organize elder care, share responsibilities, and manage medications. Turn chaos into care with our caregiving app.">
+    <meta property="og:title" content="Elderella - Family Caregiving for Elder Care">
+    <meta property="og:description" content="Elderella turns everyday elder care updates into organized care you can rely on.">
     <meta property="og:url" content="https://www.elderella.com/">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-header.png">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Elderella - Family Caregiving Made Simple">
-    <meta name="twitter:description" content="Elderella helps family caregivers organize elder care, share responsibilities, and manage medications. Turn chaos into care with our caregiving app.">
+    <meta name="twitter:title" content="Elderella - Family Caregiving for Elder Care">
+    <meta name="twitter:description" content="Elderella turns everyday elder care updates into organized care you can rely on.">
     <meta name="twitter:url" content="https://www.elderella.com/">
-    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-header.png">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
