--- a/introduce.html
+++ b/introduce.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Tips and conversation starters for caregivers introducing Elderella to their elders. Build comfort and consent around using caregiving technology.">
+    <meta name="description" content="Tips and conversation starters for family caregivers introducing Elderella to their elders. Build comfort and consent around using caregiving technology.">
     <title>Introducing Elderella to Your Elder | Elderella</title>
     <link rel="canonical" href="https://www.elderella.com/introduce">
     <meta property="og:title" content="Introducing Elderella to Your Elder | Elderella">
-    <meta property="og:description" content="Tips and conversation starters for caregivers introducing Elderella to their elders. Build comfort and consent around using caregiving technology.">
+    <meta property="og:description" content="Tips and conversation starters for family caregivers introducing Elderella to their elders. Build comfort and consent around using caregiving technology.">
     <meta property="og:url" content="https://www.elderella.com/introduce">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Introducing Elderella to Your Elder | Elderella">
-    <meta name="twitter:description" content="Tips and conversation starters for caregivers introducing Elderella to their elders. Build comfort and consent around using caregiving technology.">
+    <meta name="twitter:description" content="Tips and conversation starters for family caregivers introducing Elderella to their elders. Build comfort and consent around using caregiving technology.">
     <meta name="twitter:url" content="https://www.elderella.com/introduce">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Google Fonts -->
