--- a/privacy.html
+++ b/privacy.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Elderella Privacy Policy - How we protect and handle your personal information">
+    <meta name="description" content="Elderella Privacy Policy - How we protect and handle your personal information.">
     <meta name="keywords" content="elderella privacy policy, elder care privacy, data protection, personal information security, HIPAA compliance, eldercare data privacy">
 
     
 
     <link rel="canonical" href="https://www.elderella.com/privacy">
-    <title>Privacy Policy - Elderella</title>
+    <title>Privacy Policy - Elderella | Elderella</title>
     <link rel="canonical" href="https://www.elderella.com/privacy">
-    <meta property="og:title" content="Privacy Policy - Elderella">
-    <meta property="og:description" content="Elderella Privacy Policy - How we protect and handle your personal information">
+    <meta property="og:title" content="Privacy Policy - Elderella | Elderella">
+    <meta property="og:description" content="Elderella Privacy Policy - How we protect and handle your personal information.">
     <meta property="og:url" content="https://www.elderella.com/privacy">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Privacy Policy - Elderella">
-    <meta name="twitter:description" content="Elderella Privacy Policy - How we protect and handle your personal information">
+    <meta name="twitter:title" content="Privacy Policy - Elderella | Elderella">
+    <meta name="twitter:description" content="Elderella Privacy Policy - How we protect and handle your personal information.">
     <meta name="twitter:url" content="https://www.elderella.com/privacy">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
     <!-- Structured Data -->
