--- a/security.html
+++ b/security.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Elderella Security - How we protect your family's eldercare information with privacy-first security measures">
+    <meta name="description" content="Elderella Security - How we protect your family's elder care information with privacy-first security measures.">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="keywords" content="elderella security, elder care data security, HIPAA compliance, encryption, secure eldercare, data protection, privacy-first elder care">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Security - Elderella">
-    <meta property="og:description" content="Learn how Elderella protects your family's eldercare information with enterprise-grade security and privacy-first measures.">
+    <meta property="og:title" content="Security - Elderella | Elderella">
+    <meta property="og:description" content="Elderella Security - How we protect your family's elder care information with privacy-first security measures.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elderella.com/security">
-    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-header.png">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta property="og:site_name" content="Elderella">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Security - Elderella">
-    <meta name="twitter:description" content="Learn how Elderella protects your family's eldercare information with enterprise-grade security.">
-    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-header.png">
+    <meta name="twitter:site" content="@ElderellaCare">
+    <meta name="twitter:title" content="Security - Elderella | Elderella">
+    <meta name="twitter:description" content="Elderella Security - How we protect your family's elder care information with privacy-first security measures.">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
 
     <link rel="canonical" href="https://www.elderella.com/security">
-    <title>Security - Elderella</title>
+    <title>Security - Elderella | Elderella</title>
 
     <!-- Structured Data -->
     <script type="application/ld+json">
