--- a/support.html
+++ b/support.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get help and support for Elderella, the caregiving app. Contact us with questions, feedback, or issues.">
+    <meta name="description" content="Get help and support for Elderella, your caregiving platform for elder care. Contact us with questions, feedback, or issues.">
     <meta name="keywords" content="Elderella support, help, contact, caregiving app support">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Support - Elderella">
-    <meta property="og:description" content="Get help and support for Elderella, the caregiving app.">
+    <meta property="og:title" content="Support - Elderella | Elderella">
+    <meta property="og:description" content="Get help and support for Elderella, your caregiving platform for elder care. Contact us with questions, feedback, or issues.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.elderella.com/support">
-    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-header.png">
+    <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta property="og:site_name" content="Elderella">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Support - Elderella">
-    <meta name="twitter:description" content="Get help and support for Elderella, the caregiving app.">
-    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-header.png">
+    <meta name="twitter:site" content="@ElderellaCare">
+    <meta name="twitter:title" content="Support - Elderella | Elderella">
+    <meta name="twitter:description" content="Get help and support for Elderella, your caregiving platform for elder care. Contact us with questions, feedback, or issues.">
+    <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
 
     <link rel="canonical" href="https://www.elderella.com/support">
-    <title>Support - Elderella</title>
+    <title>Support - Elderella | Elderella</title>
 
     <!-- Structured Data -->
     <script type="application/ld+json">
