UI: standardize hero subtitle styles; update copy; add tooltip link + positioning; adjust download hero spacing
- Standardize hero-subtitle (desktop/tablet/mobile): 28px, 600 weight, 1.4 line-height, 24px margin
- Normalize mobile <br> behavior and highlight weight across hero subtitles
- Copy updates: use ‘elder care updates’ phrasing; unify explore/download text
- Add extra spacing option for download hero subtitle (+60px via .extra-gap)
- Replace CSS pseudo-element tooltip with wrapper tooltip for App Store badges
  * Add clickable link: ‘Sign up for our newsletter’ → footer form
  * Position tooltips above badge on Hero and Download; right-side on Keep on Top
- Keep Explore hero standard spacing (no extra-gap)

--- a/index.html
+++ b/index.html
@@ -57,17 +57,20 @@
                     <div class="hero-media">
                         <div class="hero-phone-wrap">
                             <div class="hero-badges">
-                                <a href="javascript:void(0)" class="store-badge soon-badge" aria-disabled="true" role="button" data-tooltip="Coming soon! Sign up for our newsletter to be notified.">
-                                    <img
-                                        src="images/app-store-badge.png"
-                                        srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
-                                        width="120"
-                                        height="40"
-                                        alt="Download on the App Store"
-                                        loading="lazy"
-                                        decoding="async"
-                                    >
-                                </a>
+                                <div class="badge-wrapper coming-soon">
+                                    <a href="javascript:void(0)" class="store-badge soon-badge" aria-disabled="true" role="button">
+                                        <img
+                                            src="images/app-store-badge.png"
+                                            srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
+                                            width="120"
+                                            height="40"
+                                            alt="Download on the App Store"
+                                            loading="lazy"
+                                            decoding="async"
+                                        >
+                                    </a>
+                                    <span class="soon-tooltip">Coming soon! <a href="#footer-newsletter-form">Sign up for our newsletter</a> to be notified.</span>
+                                </div>
                                 <a href="https://play.google.com/store/apps/details?id=com.elderella.app" class="store-badge" target="_blank" rel="noopener noreferrer" aria-label="Get Elderella on Google Play">
                                     <img
                                         src="images/google-play-badge.png"
@@ -277,7 +280,7 @@
     <section class="see-more">
         <div class="container see-more-container">
             <h2 class="see-more-headline">See more ways we help</h2>
-            <a href="/collects-care-details" class="btn-more" aria-label="Explore Elderella features">Elderella features</a>
+            <a href="collects-care-details.html" class="btn-more" aria-label="Explore Elderella features">Elderella features</a>
         </div>
     </section>
 
@@ -301,17 +304,20 @@
                 <h2>Keep on top of elder care</h2>
                 <p class="keep-on-top-text">Elderella is for families supporting elders. Built to help you organize care, share information, and ease the mental load of caregiving.</p>
                 <div class="keep-on-top-badges">
-                    <a href="javascript:void(0)" class="store-badge soon-badge" aria-disabled="true" role="button" data-tooltip="Coming soon! Sign up for our newsletter to be notified.">
-                        <img
-                            src="images/app-store-badge.png"
-                            srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
-                            width="120"
-                            height="40"
-                            alt="Download on the App Store"
-                            loading="lazy"
-                            decoding="async"
-                        >
-                    </a>
+                    <div class="badge-wrapper coming-soon">
+                        <a href="javascript:void(0)" class="store-badge soon-badge" aria-disabled="true" role="button">
+                            <img
+                                src="images/app-store-badge.png"
+                                srcset="images/app-store-badge.png 1x, images/app-store-badge@2x.png 2x"
+                                width="120"
+                                height="40"
+                                alt="Download on the App Store"
+                                loading="lazy"
+                                decoding="async"
+                            >
+                        </a>
+                        <span class="soon-tooltip">Coming soon! <a href="#footer-newsletter-form">Sign up for our newsletter</a> to be notified.</span>
+                    </div>
                     <a href="https://play.google.com/store/apps/details?id=com.elderella.app" class="store-badge" target="_blank" rel="noopener noreferrer" aria-label="Get Elderella on Google Play">
                         <img
                             src="images/google-play-badge.png"
