Typography + URL updates: - Remove mobile 16px body override in styles-v2.css (improves readability) - Raise body text from 18px to 20px on support.html and security.html - Keep inputs at 16px; ensure mobile subtitles remain 20px - Replace all Trust links with Security (trust.html -> security.html; /trust -> /security) - Update security.html canonical/OG/Twitter URLs to /security - Update sitemap to /security - Update worker clean URL map to serve /security and redirect legacy /trust

--- a/download.html
+++ b/download.html
@@ -76,7 +76,7 @@
         <div class="container">
             <h2>Trust & security</h2>
             <p class="trust-text">Caring for an elder involves some of the most personal details in a family's life. See how Elderella keeps your data private, secure, and within your control.</p>
-            <a href="trust.html" class="btn-trust">Trust & Security</a>
+            <a href="security.html" class="btn-trust">Trust & Security</a>
         </div>
     </section>
 
