--- a/introduce.html
+++ b/introduce.html
@@ -194,7 +194,7 @@
                         <div class="accordion-content-inner">
                             <p class="accordion-context">If the person you’re caring for worries about data, privacy, or technology.</p>
                             <p class="accordion-quote">"Elderella is private and secure. Only the people you choose — like me, or other family members — can see what’s added. Everything is designed to meet strict privacy laws in both Canada and the United States, similar to how your doctor’s records are protected."</p>
-                            <p class="accordion-explanation">Offer to show them our <a href="privacy.html">Privacy Policy</a> and <a href="trust.html">Elderella Trust &amp; security</a> page. Transparency builds trust.</p>
+                            <p class="accordion-explanation">Offer to show them our <a href="privacy.html">Privacy Policy</a> and <a href="security.html">Elderella Trust &amp; security</a> page. Transparency builds trust.</p>
                             <p class="accordion-context">You might also say:</p>
                             <p class="accordion-quote">"We can decide together what to include and what to leave out. If you ever change your mind about something, we can update or remove it."</p>
                         </div>
@@ -253,7 +253,7 @@
         <div class="container">
             <h2>Trust & security</h2>
             <p class="trust-text">Caring for an elder involves some of the most personal details in a family's life. See how Elderella keeps your data private, secure, and within your control.</p>
-            <a href="trust.html" class="btn-trust">Trust & Security</a>
+            <a href="security.html" class="btn-trust">Trust & Security</a>
         </div>
     </section>
 
