--- a/support.html
+++ b/support.html
@@ -102,7 +102,7 @@
         }
 
         .support-hero p {
-            font-size: 18px;
+            font-size: 20px;
             color: #FFFFFF;
             max-width: 700px;
             margin: 0 auto;
@@ -139,7 +139,7 @@
         }
 
         .support-card p {
-            font-size: 18px;
+            font-size: 20px;
             color: #595959;
             line-height: 1.5;
             margin: 0 0 16px 0;
@@ -161,7 +161,7 @@
             color: #595959;
             padding: 14px 32px;
             border-radius: 8px;
-            font-size: 18px;
+            font-size: 20px;
             font-weight: 500;
             text-decoration: none;
             margin-top: 20px;
@@ -198,7 +198,7 @@
 
         .support-links a {
             color: #342A99;
-            font-size: 18px;
+            font-size: 20px;
             text-decoration: none;
         }
 
@@ -211,8 +211,9 @@
                 font-size: 32px;
             }
 
+            /* Keep hero paragraph at 20px on mobile for readability */
             .support-hero p {
-                font-size: 16px;
+                font-size: 20px;
             }
 
             .section {
