--- a/delete-account.html
+++ b/delete-account.html
@@ -190,8 +190,8 @@
             <h2 class="questions-title">Have questions or concerns?</h2>
             <p class="questions-text">We want you to feel completely confident using Elderella. <br>Our Privacy Team is here to help you understand how we protect your information.</p>
             <div class="questions-buttons">
-                <a href="mailto:privacy@elderella.com" class="btn-outline-purple">Contact our privacy team</a>
-                <a href="https://www.elderella.com/privacy" class="btn-outline-purple">Read full privacy policy</a>
+                <a href="mailto:privacy@elderella.com" class="btn-purple">Contact our privacy team</a>
+                <a href="https://www.elderella.com/privacy" class="btn-purple">Read full privacy policy</a>
             </div>
         </div>
     </section>
