--- a/trust.html
+++ b/trust.html
@@ -6,17 +6,17 @@
     <meta name="robots" content="index, follow">
     <meta name="description" content="Learn how Elderella protects your family's caregiving information with healthcare-grade security, privacy controls, and transparent data practices.">
     <title>Trust & Security - How We Protect Your Information | Elderella</title>
-    <link rel="canonical" href="https://www.elderella.com/trust">
+    <link rel="canonical" href="https://www.elderella.com/security">
     <meta property="og:title" content="Trust & Security - How We Protect Your Information | Elderella">
     <meta property="og:description" content="Learn how Elderella protects your family's caregiving information with healthcare-grade security, privacy controls, and transparent data practices.">
-    <meta property="og:url" content="https://www.elderella.com/trust">
+    <meta property="og:url" content="https://www.elderella.com/security">
     <meta property="og:site_name" content="Elderella">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Trust & Security - How We Protect Your Information | Elderella">
     <meta name="twitter:description" content="Learn how Elderella protects your family's caregiving information with healthcare-grade security, privacy controls, and transparent data practices.">
-    <meta name="twitter:url" content="https://www.elderella.com/trust">
+    <meta name="twitter:url" content="https://www.elderella.com/security">
     <meta name="twitter:image" content="https://www.elderella.com/images/elderella-logo-share.jpg">
     <meta name="twitter:site" content="@ElderellaCare">
 
